objects/Ptnr_Onbd_Fmwk__Onboarding_Tasks__c.object
<CustomObject>
    <fields>
        <fullName>Ptnr_Onbd_Fmwk__Action_Params__c</fullName>
        <description>Set of params depending upon action type
For Link set this to a URL (HTTPS supported)
For Create record set this to the object name
For Navigate To Object set this value to the Id of the object (relative URLs should be added without a &apos;/&apos; prefix)
For Video set this to the embeddable video link</description>
        <inlineHelpText>Based on Action Type, insert an HTTPS external URL or embeddable video link, record ID, or object name</inlineHelpText>
        <label>Action Params</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ptnr_Onbd_Fmwk__Action_Type__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Link</fullName>
                </value>
                <value>
                    <fullName>Create Record</fullName>
                </value>
                <value>
                    <fullName>Display Video</fullName>
                </value>
                <value>
                    <fullName>Navigate to Object</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ptnr_Onbd_Fmwk__Button_Label__c</fullName>
        <description>Can be used to control the text that appears on the button for each tile. Determines the text that appears as the button label in the community. Partner Users could click into the button to undertake / review the tile.</description>
        <label>Button Label</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ptnr_Onbd_Fmwk__Category__c</fullName>
        <description>Provides a short description that appears on the tile.</description>
        <inlineHelpText>Short summary of tasks, such as Forms or Meet the Team.</inlineHelpText>
        <label>Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ptnr_Onbd_Fmwk__Complete_Task_When_Action_clicked__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Controls if clicking into a tile should be deemed as tile action completion.</description>
        <inlineHelpText>Action is considered complete after a member clicks the tile.</inlineHelpText>
        <label>Complete Task When Action clicked?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ptnr_Onbd_Fmwk__Description__c</fullName>
        <description>Use this field to capture a description of the action/task pertinent to the tile.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ptnr_Onbd_Fmwk__Duration_in_Days__c</fullName>
        <label>Duration (in Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ptnr_Onbd_Fmwk__Image_Name__c</fullName>
        <inlineHelpText>Complete URL of the tile image</inlineHelpText>
        <label>Image Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ptnr_Onbd_Fmwk__Onboarding_Plan__c</fullName>
        <label>Onboarding Plan</label>
        <referenceTo>Ptnr_Onbd_Fmwk__Onboarding__c</referenceTo>
        <relationshipLabel>Onboarding Tasks</relationshipLabel>
        <relationshipName>Onboarding_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ptnr_Onbd_Fmwk__Seq__c</fullName>
        <inlineHelpText>Multiple tasks can have the same sequence number if they apply to different audiences.</inlineHelpText>
        <label>Seq #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ptnr_Onbd_Fmwk__Which_roles_is_this_task_for__c</fullName>
        <defaultValue>&quot;All&quot;</defaultValue>
        <inlineHelpText>Select the audience group the task is applicable for and pick a Seq# accordingly. By default actions are applicable to all audience groups in your partner&apos;s hierarchy if one exists</inlineHelpText>
        <label>Which roles is this task for?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ptnr_Onbd_Fmwk__Partner_Persona</valueSetName>
        </valueSet>
    </fields>
    <label>Onboarding Task</label>
    <nameField>
        <displayFormat>OT-{00000}</displayFormat>
        <label>Tasks #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>